--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DB_NAME=bomba
 # Serveur
 PORT=3000
 NODE_ENV=development
+SITE_URL=http://localhost:3000
 
 # Session
 SESSION_SECRET=bomba-secret-key-change-in-production-with-long-random-string
