--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "chart.js": "^2.9.4",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -31,7 +33,9 @@
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "multer": "^2.0.2",
     "mysql2": "^3.6.5",
+    "nodemailer": "^7.0.10",
     "stripe": "^14.25.0",
     "uuid": "^13.0.0",
     "xss-clean": "^0.1.4"
