--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "node server.js",
     "test-db": "node test-db.js",
-    "init-db": "node init-db.js"
+    "init-db": "node init-db.js",
+    "health": "node health_check.js"
   },
   "keywords": [
     "ecommerce",
@@ -34,7 +35,7 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "multer": "^2.0.2",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "stripe": "^14.25.0",
     "uuid": "^9.0.1",
