--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "nodemailer": "^7.0.10",
     "stripe": "^14.25.0",
     "uuid": "^9.0.1",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "ioredis": "^5.3.2",
+    "connect-redis": "^7.1.0"
   }
 }
